# GHOSTROUTE_SECURITY_HOMEPAGE_API

./: .dockerignore  .env_sample  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1b9d874324ba_initial_create_user_table.py  cd13da66c465_update_unique_table_row_username_email.py  ef32a683952d_add_index_to_email_field.py
api/: __init__.py  celery.py  dependencies.py
api/controllers/: __init__.py  user.py
api/middlewares/: exceptions.py
api/models/: base.py  user.py
api/repositories/: base.py  users.py
api/schemas/: __init__.py  user.py
api/services/: __init__.py  user.py
api/tasks/: __init__.py
config/: __init__.py  db.py  env_configs.py
templates/: registration_verification.html
utils/: utils.py
